# anytomd-rs

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  PRD.md  README.md  TECH_SPEC.md  docker-compose.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  npm-publish.yml
examples/gemini-async-verify/: README.md  main.rs
src/: detection.rs  error.rs  lib.rs  main.rs  markdown.rs  parse.rs  runner.rs  wasm.rs  zip_utils.rs
src/converter/: code.rs  csv.rs  csv_conv.rs  docx.rs  gemini.rs  html.rs  image.rs  ipynb.rs  json.rs  json_conv.rs  mod.rs  ooxml_utils.rs  plain_text.rs  pptx.rs  xlsx.rs  xml.rs
tests/: test_cli.rs  test_code.rs  test_csv.rs  test_docx.rs  test_html.rs  test_image_describer.rs  test_ipynb.rs  test_json.rs  test_plain_text.rs  test_plain_text_output.rs  test_pptx.rs  test_xls.rs  test_xlsx.rs  test_xml.rs  wasm.rs
tests/common/: mod.rs
tests/fixtures/: sample.csv  sample.docx  sample.html  sample.ipynb  sample.json  sample.pptx  sample.py  sample.xlsx  sample.xml  sample_unicode.xls
tests/fixtures/expected/: sample.csv.md  sample.docx.md  sample.html.md  sample.ipynb.md  sample.json.md  sample.pptx.md  sample.py.md  sample.txt.md  sample.xls.md  sample.xlsx.md  sample.xml.md  sample_unicode.xls.md
