[package]
name = "anytomd"
version = "0.5.0"
edition = "2021"
rust-version = "1.90"
license = "Apache-2.0"
description = "Pure Rust library that converts various document formats into Markdown"
repository = "https://github.com/developer0hye/anytomd-rs"
homepage = "https://github.com/developer0hye/anytomd-rs"
documentation = "https://docs.rs/anytomd"
readme = "README.md"
keywords = ["markdown", "converter", "document", "llm"]
categories = ["parser-implementations", "text-processing"]

[dependencies]
zip = "2"
quick-xml = "0.37"
calamine = { version = "0.26", features = ["dates"] }
chrono = { version = "0.4", default-features = false }
csv = "1"
serde_json = "1"
ego-tree = "0.10"
scraper = "0.22"
encoding_rs = "0.8"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
ureq = "3"
base64 = "0.22"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
