[package]
name = "anytomd"
version = "0.8.0"
edition = "2024"
rust-version = "1.90"
license = "Apache-2.0"
description = "Pure Rust library that converts various document formats into Markdown"
repository = "https://github.com/developer0hye/anytomd-rs"
homepage = "https://github.com/developer0hye/anytomd-rs"
documentation = "https://docs.rs/anytomd"
readme = "README.md"
keywords = ["markdown", "converter", "document", "llm"]
categories = ["parser-implementations", "text-processing"]
exclude = ["examples/"]

[features]
default = []
async = ["dep:futures-util"]
async-gemini = ["async", "dep:reqwest"]

[dependencies]
zip = "2"
quick-xml = "0.37"
calamine = { version = "0.26", features = ["dates"] }
chrono = { version = "0.4", default-features = false }
csv = "1"
serde_json = "1"
ego-tree = "0.10"
scraper = "0.22"
encoding_rs = "0.8"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
ureq = "3"
base64 = "0.22"
futures-util = { version = "0.3", default-features = false, features = ["alloc"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[[example]]
name = "gemini-async-verify"
path = "examples/gemini-async-verify/main.rs"
